debug_js_text.txt
  File "<string>", line 13
    print(f'  img src: {img.get(\
                               ^
SyntaxError: '(' was never closed
